--- a/5 Функции/Функции.ipynb
+++ b/5 Функции/Функции.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +88,19 @@
     "    for rack in directories:\n",
     "        if new_shelf == rack:\n",
     "            print('Такая полка уже существует')\n",
-    "            \n",
-    "    directories[new_shelf] = []\n",
+    "            memory = 1\n",
+    "            break\n",
+    "        else:\n",
+    "            memory = 0\n",
+    "    if memory == 0:\n",
+    "        directories[new_shelf] = []\n",
     "            \n",
     "    return directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +108,8 @@
     "    document_number = input('Введите номер документа: ')\n",
     "    for element in documents:\n",
     "        if element['number'] == document_number:\n",
-    "            del(element['number'])\n",
+    "            documents.remove(element)\n",
+    "            break\n",
     "    for rack in directories:\n",
     "        if document_number in directories[rack]:\n",
     "            directories[rack].remove(document_number)\n",
@@ -121,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +171,8 @@
     "        else:\n",
     "            memory = 0\n",
     "    if memory == 0:\n",
-    "        print('Невозможно добавить документ, данный сотрудник отсутствует в каталоге') \n",
+    "        documents.append({'type' : typee, 'number' : document_number, 'name' : name, })\n",
+    "         \n",
     "    for rack in directories:\n",
     "        if shelf_number == rack:\n",
     "            directories[rack].append(document_number)\n",
@@ -181,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,46 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите одну из команд:\n",
-      "p - запросить документ по имени пользователя\n",
-      "s - вывести номер полки, на которой находится документ\n",
-      "l - вывести полный список документов\n",
-      "as - добавить новую полку\n",
-      "d - удалить документ\n",
-      "m - переместить документ\n",
-      "a - добавить новый документ документ\n",
-      "a\n",
-      "Введите номер документа: 45673\n",
-      "Введите тип документа: gdgdgds\n",
-      "Введите имя сотрудника: Геннадий Покемонов\n",
-      "Введите номер полки: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1': ['2207 876234', '11-2'], '2': ['10006', '89547', '45637', '45673'], '3': ['5467', '5896']} [{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин', 'type1': 'gfgfgfg', 'number1': '45637'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов', 'type1': 'gdgdgds', 'number1': '45673'}, {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов', 'type1': \"driver' license\", 'number1': '5467'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(directories, documents)"
    ]
