Исправил + разобрался с функцией max(), спасибо!)

--- a/4 Управляющие конструкции и коллекции 2/Управляющие конструкции.ipynb
+++ b/4 Управляющие конструкции и коллекции 2/Управляющие конструкции.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'visit1': ['Москва', 'Россия']}, {'visit3': ['Владимир', 'Россия']}, {'visit7': ['Тула', 'Россия']}, {'visit8': ['Тула', 'Россия']}, {'visit9': ['Курск', 'Россия']}, {'visit10': ['Архангельск', 'Россия']}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Задача №1\n",
     "geo_logs = [\n",
@@ -30,23 +22,23 @@
     "geo_logs_filtered=[]\n",
     "\n",
     "for element in geo_logs:\n",
-    "    for country in element.values():\n",
-    "        if 'Россия' in country:\n",
-    "            geo_logs_filtered.append(element)\n",
+    "\n",
+    "    if list(element.values())[0][1] == 'Россия':\n",
+    "        geo_logs_filtered.append(element)\n",
     "            \n",
     "print(geo_logs_filtered)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[98, 35, 213, 54, 119, 15]\n"
+      "{98, 35, 213, 54, 119, 15}\n"
      ]
     }
    ],
@@ -55,34 +47,20 @@
     "ids = {'user1': [213, 213, 213, 15, 213], \n",
     "       'user2': [54, 54, 119, 119, 119], \n",
     "       'user3': [213, 98, 98, 35]}\n",
-    "       \n",
-    "user1 = set(ids['user1'])\n",
-    "user2 = set(ids['user2'])\n",
-    "user3 = set(ids['user3'])\n",
     "\n",
-    "user1.update(user2, user1.symmetric_difference(user3))\n",
-    "\n",
-    "print(list(user1))"
+    "var = set(ids['user1'])\n",
+    "for key in ids:\n",
+    "     var.update(set(ids[key]))\n",
+    "    \n",
+    "print(var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Кол-во запросов из 2 слов составляет 33.0 %\n",
-      "Кол-во запросов из 3 слов составляет 44.0 %\n",
-      "Кол-во запросов из 4 слов составляет 11.0 %\n",
-      "Кол-во запросов из 5 слов составляет: 11.0 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# Задача №3\n",
     "\n",
     "queries = [\n",
@@ -130,36 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yandex\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'yandex'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Задача №4\n",
     "\n",
-    "stats = {'facebook': 55, 'yandex': 120, 'vk': 115, 'google': 99, 'email': 42, 'ok': 98}\n",
+    "stats = {'facebook': 55, 'yandex': 120, 'vk': 115, 'google': 99, 'email': 42, 'ok': 98} \n",
     "\n",
-    "numbers = list(stats.values())\n",
-    "greatest = numbers[0]\n",
-    "for element in numbers:\n",
-    "    if element > greatest:\n",
-    "        greatest = element\n",
-    "\n",
-    "for element in list(stats.keys()):\n",
-    "    if stats[element] == greatest:\n",
-    "        print(element)"
+    "max(stats, key=stats.get)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
