--- a/14 Продвинутый pandas/advanced_pandas.ipynb
+++ b/14 Продвинутый pandas/advanced_pandas.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n"
+    "import os\n",
+    "os.chdir('film dataset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +27,10 @@
    "outputs": [],
    "source": [
     "# Задание №1\n",
-    "log.loc[(log.region == 'Russia')|( log.traffic_source == ('yandex', 'google')), 'source_type'] = 'organic'\n",
-    "log.loc[(log.region == 'Russia')|( log.traffic_source == ('paid', 'email')), 'source_type'] = 'ad'\n",
-    "log.loc[(log.region != 'Russia')|( log.traffic_source == ('paid', 'email')), 'source_type'] = 'other'\n",
-    "log.loc[(log.traffic_source == 'Nan'), 'source_type'] = log.traffic_source"
+    "log.loc[( log.traffic_sourc.isin(['yandex', 'google']), 'source_type'] = 'organic'\n",
+    "log.loc[(log.region == 'Russia')&( log.traffic_source.isin(['paid', 'email'])), 'source_type'] = 'ad'\n",
+    "log.loc[(log.region != 'Russia')&( log.traffic_source.isin(['paid', 'email'])), 'source_type'] = 'other'\n",
+    "log.loc[log.traffic_source.isnull(), 'source_type'] = log.traffic_source"
    ]
   },
   {
@@ -246,6 +247,20 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
